# sys-courses

./: .env.example  .gitignore  FIX_400_ERROR.md  GEMINI_SETUP.md  LICENSE  LIVE_AI_CHAT.md  QUICK_FIX.md  README.md  TROUBLESHOOTING.md  check_db_range.py  dashboard.py  docker-compose.yml  package-lock.json  package.json  phishguard-game.html  requirements.txt  server.ts
affective-computing/: .gitignore  README.md
data-science-application/poetry-ai/: README.md  pyproject.toml  requirements.txt
data-science-application/poetry-ai/data/: .gitkeep
data-science-application/poetry-ai/notebooks/: download_model.ipynb
data-science-application/poetry-ai/scripts/: start_backend.sh  start_frontend.sh
data-science-application/poetry-ai/src/: __init__.py
data-science-application/poetry-ai/src/backend/: __init__.py  main.py
data-science-application/poetry-ai/src/backend/api/: routes.py  schemas.py
data-science-application/poetry-ai/src/backend/core/: __init__.py  config.py  state.py
data-science-application/poetry-ai/src/backend/graph/: __init__.py  poetry_graph.py
data-science-application/poetry-ai/src/backend/services/: __init__.py  classification.py  recommendation.py
data-science-application/poetry-ai/src/frontend/: App.js  package-lock.json  package.json
data-science-application/poetry-ai/src/frontend/App/: App.css  App.jsx
data-science-application/poetry-ai/src/frontend/components/: MessageList.js  index.js
data-science-application/poetry-ai/src/frontend/hooks/: useChat.js
data-science-application/poetry-ai/src/frontend/public/: index.html
data-science-application/poetry-ai/src/frontend/services/: apiClient.js  chatService.js  index.js
data-science-application/poetry-ai/streamlit_app/: streamlit_app_with_langgraph.py
data-science-application/poetry-ai/tests/backend/: test_api.py
data-science-application/poetry-ai/tests/frontend/: .gitkeep
(+126 files in other folders)
